Added tests for buffer query builder and population in area query builder

--- a/.jshintrc
+++ b/.jshintrc
@@ -87,6 +87,7 @@
         "describe": true,
         "it": true,
         "before": true,
-        "after": true
+        "after": true,
+        "__lib": true
     }
 }
