--- a/.jshintrc
+++ b/.jshintrc
@@ -82,11 +82,14 @@
 //    "wsh"           : false,    // Windows Scripting Host
 //    "yui"           : false,    // Yahoo User Interface
 
-    // Custom Globals
-    "globals"       : { // additional predefined global variables
-        "describe": true,
-        "it": true,
-        "before": true,
-        "after": true
-    }
+    // Custom predefined global variables
+    "predef": [
+        "-console", // disallows console, use debug
+        "describe",
+        "it",
+        "beforeEach",
+        "afterEach",
+        "before",
+        "after"
+    ]
 }
