--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
     "mocha": "^2.4.5",
+    "semver": "^5.1.0",
     "yargs": "^3.32.0"
   }
 }
