--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "bunyan": "1.8.1",
     "cartodb-psql": "^0.6.1",
     "debug": "^2.2.0",
     "dot": "^1.0.3",
