--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bunyan": "1.8.1",
-    "cartodb-psql": "^0.6.1",
+    "cartodb-psql": "cartodb/node-cartodb-psql#node-v6",
     "debug": "^2.2.0",
     "dot": "^1.0.3",
     "request": "^2.69.0"
