--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "mocha": "^2.4.5",
     "semver": "^5.1.0",
     "yargs": "^3.32.0"
+  },
+  "engines": {
+    "node": ">=6.9",
+    "yarn": ">=0.27.5 <1.0.0"
   }
 }
