--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bunyan": "1.8.1",
-    "cartodb-psql": "github:cartodb/node-cartodb-psql#nodejs-10",
+    "cartodb-psql": "^0.13.0",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
     "request": "2.85.0"
