--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "dependencies": {
     "async": "^1.5.2",
     "bunyan": "1.8.1",
-    "cartodb-psql": "^0.13.0",
+    "cartodb-psql": "0.13.0",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
     "request": "2.85.0"
   },
   "devDependencies": {
-    "cartodb-redis": "0.13.0",
+    "cartodb-redis": "^0.13.0",
     "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
     "mocha": "^2.4.5",
