--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "yargs": "^3.32.0"
   },
   "engines": {
-    "node": ">=6.9",
-    "npm": ">=3.10.9 <4.0.0"
+    "node": "^10.15.1",
+    "npm": "^6.4.1"
   }
 }
