--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "^1.5.2",
     "bunyan": "1.8.1",
     "cartodb-psql": "0.13.1",
+    "cartodb-query-tables": "github:algunenano/node-cartodb-query-tables#pg_test",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
     "request": "2.85.0"
