--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "async": "^1.5.2",
     "bunyan": "1.8.1",
-    "cartodb-psql": "github:algunenano/node-cartodb-psql#query_timeout",
-    "cartodb-query-tables": "github:algunenano/node-cartodb-query-tables#pg_test",
+    "cartodb-psql": "0.14.0",
+    "cartodb-query-tables": "0.6.0",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
     "request": "2.85.0"
