--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camshaft",
-  "version": "0.64.1",
+  "version": "0.64.2",
   "description": "Analysis library to create data views from queries",
   "main": "./lib/analysis.js",
   "scripts": {
@@ -26,7 +26,7 @@
     "async": "^1.5.2",
     "bunyan": "1.8.1",
     "cartodb-psql": "0.14.0",
-    "cartodb-query-tables": "0.6.0",
+    "cartodb-query-tables": "^0.6.1",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
     "request": "2.85.0"
