--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cartodb-query-tables": "^0.6.1",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
-    "request": "2.85.0"
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "cartodb-redis": "^0.13.0",
