Use plpython3u when testing against PG12+

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,45 @@
+dist: xenial
 language: node_js
-sudo: false
-dist: trusty
+sudo: required
 
 env:
-    - POSTGRESQL_VERSION="10"
+  global:
+    - PGUSER=postgres
+    - PGDATABASE=postgres
+    - PGOPTIONS='-c client_min_messages=NOTICE'
+    - PGPORT=5432
 
-node_js:
-  - "10"
+jobs:
+  include:
+    - env: POSTGRESQL_VERSION="10" POSTGIS_VERSION="2.5"
+      node_js: "10"
+    - env: POSTGRESQL_VERSION="11" POSTGIS_VERSION="2.5"
+      node_js: "10"
+    - env: POSTGRESQL_VERSION="12" POSTGIS_VERSION="2.5"
+      node_js: "10"
+    - env: POSTGRESQL_VERSION="12" POSTGIS_VERSION="3"
+      node_js: "10"
+    - env: POSTGRESQL_VERSION="11" POSTGIS_VERSION="2.5"
+      node_js: "12"
+    - env: POSTGRESQL_VERSION="12" POSTGIS_VERSION="3"
+      node_js: "12"
+  allow_failures:
+    - env: POSTGRESQL_VERSION="11" POSTGIS_VERSION="2.5"
+      node_js: "12"
+    - env: POSTGRESQL_VERSION="12" POSTGIS_VERSION="3"
+      node_js: "12"
 
 before_install:
   - sudo service postgresql stop;
-  - sudo apt-get install -y --allow-unauthenticated --no-install-recommends --no-install-suggests postgresql-$POSTGRESQL_VERSION postgresql-client-$POSTGRESQL_VERSION postgresql-server-dev-$POSTGRESQL_VERSION postgresql-$POSTGRESQL_VERSION-postgis-2.4 postgresql-$POSTGRESQL_VERSION-postgis-2.4-scripts postgresql-plpython-$POSTGRESQL_VERSION
-  - echo -e "# TYPE  DATABASE        USER            ADDRESS                 METHOD \nlocal   all             postgres                                trust\nlocal   all             all                                     trust\nhost    all             all             127.0.0.1/32            trust"  | sudo tee /etc/postgresql/$POSTGRESQL_VERSION/main/pg_hba.conf
-  - export PGPORT=`grep ^port /etc/postgresql/$POSTGRESQL_VERSION/main/postgresql.conf | awk '{print $3}'`
-  - sed -i 's/5432/'"$PGPORT"'/g' test/test-config.js
-  - sudo service postgresql restart $POSTGRESQL_VERSION;
+  - sudo apt-get remove postgresql* -y
+  - sudo apt-get install -y --allow-unauthenticated --no-install-recommends --no-install-suggests postgresql-$POSTGRESQL_VERSION postgresql-client-$POSTGRESQL_VERSION postgresql-server-dev-$POSTGRESQL_VERSION postgresql-common
+  - sudo apt-get install -y --allow-unauthenticated postgresql-$POSTGRESQL_VERSION-postgis-$POSTGIS_VERSION postgresql-$POSTGRESQL_VERSION-postgis-$POSTGIS_VERSION-scripts postgis
+  # For pre12, install plpython2. For PG12 install plpython3
+  - if [[ $POSTGRESQL_VERSION != '12' ]]; then sudo apt-get install -y postgresql-plpython-$POSTGRESQL_VERSION python python-redis; else sudo apt-get install -y postgresql-plpython3-12 python3 python3-redis; fi;
+  - sudo pg_dropcluster --stop $POSTGRESQL_VERSION main
+  - sudo rm -rf /etc/postgresql/$POSTGRESQL_VERSION /var/lib/postgresql/$POSTGRESQL_VERSION
+  - sudo pg_createcluster -u postgres $POSTGRESQL_VERSION main -- --auth-local trust
+  - sudo /etc/init.d/postgresql start $POSTGRESQL_VERSION || sudo journalctl -xe
+
+after_failure:
+  - pg_lsclusters
