--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "request": "^2.85.0"
   },
   "devDependencies": {
-    "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
-    "mocha": "^2.4.5",
+    "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
     "semver": "^5.1.0",
     "yargs": "^3.32.0"
   },
