--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "main": "./lib/analysis.js",
   "dependencies": {
     "async": "^1.5.2",
-    "bunyan": "1.8.1",
     "cartodb-psql": "0.14.0",
     "cartodb-query-tables": "^0.6.1",
     "debug": "^3.1.0",
     "dot": "^1.0.3",
+    "pino": "^6.3.1",
     "request": "^2.85.0"
   },
   "devDependencies": {
